# coronary-artery-ablation

./: .gitignore  README.md  pyproject.toml  requirements.txt
nbs/: imageCAS.ipynb
script/: ablation1_train.py  ablation1_train_2.py  ablation2_train.py  proposed_train.py  train.py
src/data/: ablation1_dataloader.py  ablation1_dataloader_2.py  ablation2_dataloader.py  dataloader.py  generate_distance_maps.py  proposed_dataloader.py
src/models/: networks.py  proposed_networks.py
src/models/model/: DSCNet.py  csnet_3d.py  nnformer.py
src/models/proposed/: ape_segresnet.py  attentionunet.py  csnet_3d.py  nnformer.py  segresnet.py  spade.py  swin_unetr.py  unetr.py  vnet.py
src/utils/DSCNet/: DSConv.py
src/utils/nnformer/network_architecture/: neural_network.py
