[project]
name = "coronary-artery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autorootcwd>=1.0.1",
    "dvc>=3.59.1",
    "dvc-gdrive>=3.0.1",
    "dvclive>=3.48.2",
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "lightning>=2.5.1",
    "lmdb>=1.6.2",
    "monai>=1.4.0",
    "nibabel>=5.3.2",
    "pandas>=2.2.3",
    "pytorch-lightning>=2.5.1",
    "pyyaml>=6.0.2",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "simpleitk>=2.4.1",
    "tqdm>=4.67.1",
]
